unpackaged/main/default/objects/splashthat__Default_Field_Mapping__mdt/splashthat__Default_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>The required field mappings for splash resync to function correclty</description>
    <label>Default Field Mapping</label>
    <pluralLabel>Default Field Mappings</pluralLabel>
</CustomObject>