unpackaged/main/default/objects/splashthat__Default_Field_Mapping__mdt/fields/splashthat__Salesforce_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Salesforce_Field_Value__c</fullName>
    <label>Salesforce Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>