unpackaged/main/default/objects/splashthat__Default_Field_Mapping__mdt/fields/splashthat__Salesforce_Required_For_Mappings__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Salesforce_Required_For_Mappings__c</fullName>
    <label>Salesforce Required For Mappings</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>