unpackaged/main/default/objects/splashthat__Default_Field_Mapping__mdt/fields/splashthat__Splash_Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Splash_Field_Data_Type__c</fullName>
    <label>Splash Field Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>