unpackaged/main/default/objects/splashthat__Default_Field_Mapping__mdt/fields/splashthat__Splash_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Splash_Field_Value__c</fullName>
    <label>Splash Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>